sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:17: error: '(' expected but identifier found.
      if isSmallerThan(i+gap, i){
         ^AlgCombSort:22: error: ';' expected but identifier found.
  }while(gap>1)&&(echange==true)
               ^