sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  
  var gap = getValueCount()
  var x = getValueCount()
  var i=0
  var echange = true
  
  do{
    if(gap>1){gap = (gap.toDouble / 1.3).toInt;}
    
    echange = false
    i=0;
    
    while (i+gap < x){
      
      if isSmallerThan(i+gap, i){
        echange=true;
        swap(i, i+gap);}
      i+=1
    }
  }while(gap>1)&&(echange==true)
}